fixed meta tag to fix overflow-x problem on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -52,6 +52,10 @@ html {
 body {
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
+
+  @include respond(tab-port) {
+    overflow-x: hidden;
+  }
 }
 /*
 .navbar {
